--- a/src/main/webapp/prueba.xhtml
+++ b/src/main/webapp/prueba.xhtml
@@ -1,19 +1,11 @@
-
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-
-
     <h:form enctype="multipart/form-data">
-        <p:messages autoUpdate="true" />
-
-        <p:fileUpload fileUploadListener="#{subirArchivo.handleFileUpload}" mode="simple" />
-
-
-        <p:commandButton value="Upload" actionListener="#{subirArchivo.handleFileUpload}" />
+        <p:fileUpload value="#{subirArchivo.file}" mode="simple" />
+        <p:commandButton value="Subir" action="#{subirArchivo.upload}" update="@form" />
     </h:form>
-
 </ui:composition>
