--- a/src/main/webapp/main.xhtml
+++ b/src/main/webapp/main.xhtml
@@ -29,6 +29,7 @@
                 <h:commandLink value="Registrar Transaccion" styleClass="comanlink-sub" action="#{controlVistas.showRegistrarTransaciones()}" />
                 <h:commandLink value="Lista de Transacciones" styleClass="comanlink-sub" action="#{controlVistas.showTranssaccion()}" />
             </div>
+            <h:commandLink value="Salir" styleClass="comanlink" action="#{login.cerrarSesion()}" />
         </h:form>
     </div>
     <div class="content">
